parser.output
   0  $accept : %entry% $end

   1  actuals_opt :
   2              | actuals_list

   3  actuals_list : expr
   4               | actuals_list COMMA expr

   5  expr : expr PLUS expr
   6       | expr MINUS expr
   7       | expr TIMES expr
   8       | expr DIVIDE expr
   9       | expr MOD expr
  10       | expr LT expr
  11       | expr GT expr
  12       | expr LEQ expr
  13       | expr GEQ expr
  14       | expr EQ expr
  15       | expr NEQ expr
  16       | expr OR expr
  17       | expr AND expr
  18       | NOT expr
  19       | ID ASSIGN expr
  20       | ID LPAREN actuals_opt RPAREN
  21       | LPAREN expr RPAREN
  22       | NUM

  23  expr_opt :
  24           | expr

  25  formal_list : ID
  26              | formal_list COMMA ID

  27  formals_opt :
  28              | formal_list

  29  stmt_list :
  30            | stmt_list stmt

  31  stmt : expr SEMI
  32       | RETURN expr SEMI
  33       | LBRACE stmt_list RBRACE
  34       | IF LPAREN expr RPAREN stmt
  35       | IF LPAREN expr RPAREN stmt ELSE stmt
  36       | FOR LPAREN expr_opt SEMI expr_opt SEMI expr_opt RPAREN stmt
  37       | WHILE LPAREN expr RPAREN stmt

  38  vdecl : INT ID SEMI
  39        | BOOL ID SEMI
  40        | DOUBLE ID SEMI

  41  vdecl_list :
  42             | vdecl_list vdecl

  43  fdecl : ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

  44  program :
  45          | program vdecl
  46          | program fdecl

  47  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (47)
	program : .  (44)

	.  reduce 44

	program  goto 3


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : program . vdecl  (45)
	program : program . fdecl  (46)
	%entry% : '\001' program .  (47)

	BOOL  shift 4
	DOUBLE  shift 5
	INT  shift 6
	ID  shift 7
	$end  reduce 47

	vdecl  goto 8
	fdecl  goto 9


state 4
	vdecl : BOOL . ID SEMI  (39)

	ID  shift 10
	.  error


state 5
	vdecl : DOUBLE . ID SEMI  (40)

	ID  shift 11
	.  error


state 6
	vdecl : INT . ID SEMI  (38)

	ID  shift 12
	.  error


state 7
	fdecl : ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (43)

	LPAREN  shift 13
	.  error


state 8
	program : program vdecl .  (45)

	.  reduce 45


state 9
	program : program fdecl .  (46)

	.  reduce 46


state 10
	vdecl : BOOL ID . SEMI  (39)

	SEMI  shift 14
	.  error


state 11
	vdecl : DOUBLE ID . SEMI  (40)

	SEMI  shift 15
	.  error


state 12
	vdecl : INT ID . SEMI  (38)

	SEMI  shift 16
	.  error


state 13
	fdecl : ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (43)
	formals_opt : .  (27)

	ID  shift 17
	RPAREN  reduce 27

	formal_list  goto 18
	formals_opt  goto 19


state 14
	vdecl : BOOL ID SEMI .  (39)

	.  reduce 39


state 15
	vdecl : DOUBLE ID SEMI .  (40)

	.  reduce 40


state 16
	vdecl : INT ID SEMI .  (38)

	.  reduce 38


state 17
	formal_list : ID .  (25)

	.  reduce 25


state 18
	formal_list : formal_list . COMMA ID  (26)
	formals_opt : formal_list .  (28)

	COMMA  shift 20
	RPAREN  reduce 28


state 19
	fdecl : ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (43)

	RPAREN  shift 21
	.  error


state 20
	formal_list : formal_list COMMA . ID  (26)

	ID  shift 22
	.  error


state 21
	fdecl : ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (43)

	LBRACE  shift 23
	.  error


state 22
	formal_list : formal_list COMMA ID .  (26)

	.  reduce 26


state 23
	fdecl : ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (43)
	vdecl_list : .  (41)

	.  reduce 41

	vdecl_list  goto 24


state 24
	vdecl_list : vdecl_list . vdecl  (42)
	fdecl : ID LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (43)
	stmt_list : .  (29)

	BOOL  shift 4
	DOUBLE  shift 5
	INT  shift 6
	LPAREN  reduce 29
	LBRACE  reduce 29
	RBRACE  reduce 29
	NOT  reduce 29
	IF  reduce 29
	WHILE  reduce 29
	FOR  reduce 29
	RETURN  reduce 29
	NUM  reduce 29
	ID  reduce 29

	stmt_list  goto 25
	vdecl  goto 26


state 25
	stmt_list : stmt_list . stmt  (30)
	fdecl : ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (43)

	LPAREN  shift 27
	LBRACE  shift 28
	RBRACE  shift 29
	NOT  shift 30
	IF  shift 31
	WHILE  shift 32
	FOR  shift 33
	RETURN  shift 34
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 37
	stmt  goto 38


state 26
	vdecl_list : vdecl_list vdecl .  (42)

	.  reduce 42


state 27
	expr : LPAREN . expr RPAREN  (21)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 39


state 28
	stmt : LBRACE . stmt_list RBRACE  (33)
	stmt_list : .  (29)

	.  reduce 29

	stmt_list  goto 40


state 29
	fdecl : ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .  (43)

	.  reduce 43


state 30
	expr : NOT . expr  (18)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 41


state 31
	stmt : IF . LPAREN expr RPAREN stmt  (34)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (35)

	LPAREN  shift 42
	.  error


state 32
	stmt : WHILE . LPAREN expr RPAREN stmt  (37)

	LPAREN  shift 43
	.  error


state 33
	stmt : FOR . LPAREN expr_opt SEMI expr_opt SEMI expr_opt RPAREN stmt  (36)

	LPAREN  shift 44
	.  error


state 34
	stmt : RETURN . expr SEMI  (32)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 45


state 35
	expr : NUM .  (22)

	.  reduce 22


state 36
	expr : ID . ASSIGN expr  (19)
	expr : ID . LPAREN actuals_opt RPAREN  (20)

	LPAREN  shift 46
	ASSIGN  shift 47
	.  error


state 37
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)
	stmt : expr . SEMI  (31)

	SEMI  shift 48
	MOD  shift 49
	PLUS  shift 50
	TIMES  shift 51
	MINUS  shift 52
	DIVIDE  shift 53
	EQ  shift 54
	NEQ  shift 55
	LEQ  shift 56
	GEQ  shift 57
	LT  shift 58
	GT  shift 59
	AND  shift 60
	OR  shift 61
	.  error


state 38
	stmt_list : stmt_list stmt .  (30)

	.  reduce 30


state 39
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)
	expr : LPAREN expr . RPAREN  (21)

	RPAREN  shift 62
	MOD  shift 49
	PLUS  shift 50
	TIMES  shift 51
	MINUS  shift 52
	DIVIDE  shift 53
	EQ  shift 54
	NEQ  shift 55
	LEQ  shift 56
	GEQ  shift 57
	LT  shift 58
	GT  shift 59
	AND  shift 60
	OR  shift 61
	.  error


state 40
	stmt_list : stmt_list . stmt  (30)
	stmt : LBRACE stmt_list . RBRACE  (33)

	LPAREN  shift 27
	LBRACE  shift 28
	RBRACE  shift 63
	NOT  shift 30
	IF  shift 31
	WHILE  shift 32
	FOR  shift 33
	RETURN  shift 34
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 37
	stmt  goto 38


state 41
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)
	expr : NOT expr .  (18)

	.  reduce 18


state 42
	stmt : IF LPAREN . expr RPAREN stmt  (34)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (35)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 64


state 43
	stmt : WHILE LPAREN . expr RPAREN stmt  (37)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 65


state 44
	stmt : FOR LPAREN . expr_opt SEMI expr_opt SEMI expr_opt RPAREN stmt  (36)
	expr_opt : .  (23)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	SEMI  reduce 23

	expr  goto 66
	expr_opt  goto 67


state 45
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)
	stmt : RETURN expr . SEMI  (32)

	SEMI  shift 68
	MOD  shift 49
	PLUS  shift 50
	TIMES  shift 51
	MINUS  shift 52
	DIVIDE  shift 53
	EQ  shift 54
	NEQ  shift 55
	LEQ  shift 56
	GEQ  shift 57
	LT  shift 58
	GT  shift 59
	AND  shift 60
	OR  shift 61
	.  error


state 46
	expr : ID LPAREN . actuals_opt RPAREN  (20)
	actuals_opt : .  (1)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	RPAREN  reduce 1

	actuals_opt  goto 69
	actuals_list  goto 70
	expr  goto 71


state 47
	expr : ID ASSIGN . expr  (19)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 72


state 48
	stmt : expr SEMI .  (31)

	.  reduce 31


state 49
	expr : expr MOD . expr  (9)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 73


state 50
	expr : expr PLUS . expr  (5)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 74


state 51
	expr : expr TIMES . expr  (7)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 75


state 52
	expr : expr MINUS . expr  (6)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 76


state 53
	expr : expr DIVIDE . expr  (8)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 77


state 54
	expr : expr EQ . expr  (14)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 78


state 55
	expr : expr NEQ . expr  (15)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 79


state 56
	expr : expr LEQ . expr  (12)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 80


state 57
	expr : expr GEQ . expr  (13)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 81


state 58
	expr : expr LT . expr  (10)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 82


state 59
	expr : expr GT . expr  (11)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 83


state 60
	expr : expr AND . expr  (17)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 84


state 61
	expr : expr OR . expr  (16)

	LPAREN  shift 27
	NOT  shift 30
	NUM  shift 35
	ID  shift 36
	.  error

	expr  goto 85


state 62
	expr : LPAREN expr RPAREN .  (21)

	.  reduce 21


state 63
	stmt : LBRACE stmt_list RBRACE .  (33)

	.  reduce 33


state 64
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)
	stmt : IF LPAREN expr . RPAREN stmt  (34)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (35)

	RPAREN  shift 86
	MOD  shift 49
	PLUS  shift 50
	TIMES  shift 51
	MINUS  shift 52
	DIVIDE  shift 53
	EQ  shift 54
	NEQ  shift 55
	LEQ  shift 56
	GEQ  shift 57
	LT  shift 58
	GT  shift 59
	AND  shift 60
	OR  shift 61
	.  error


state 65
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)
	stmt : WHILE LPAREN expr . RPAREN stmt  (37)

	RPAREN  shift 87
	MOD  shift 49
	PLUS  shift 50
	TIMES  shift 51
	MINUS  shift 52
	DIVIDE  shift 53
	EQ  shift 54
	NEQ  shift 55
	LEQ  shift 56
	GEQ  shift 57
	LT  shift 58
	GT  shift 59
	AND  shift 60
	OR  shift 61
	.  error


state 66
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)
	expr_opt : expr .  (24)

	MOD  shift 49
	PLUS  shift 50
	TIMES  shift 51
	MINUS  shift 52
	DIVIDE  shift 53
	EQ  shift 54
	NEQ  shift 55
	LEQ  shift 56
	GEQ  shift 57
	LT  shift 58
	GT  shift 59
	AND  shift 60
	OR  shift 61
	SEMI  reduce 24
	RPAREN  reduce 24


state 67
	stmt : FOR LPAREN expr_opt . SEMI expr_opt SEMI expr_opt RPAREN stmt  (36)

	SEMI  shift 88
	.  error


state 68
	stmt : RETURN expr SEMI .  (32)

	.  reduce 32


state 69
	expr : ID LPAREN actuals_opt . RPAREN  (20)

	RPAREN  shift 89
	.  error


state 70
	actuals_opt : actuals_list .  (2)
	actuals_list : actuals_list . COMMA expr  (4)

	COMMA  shift 90
	RPAREN  reduce 2


state 71
	actuals_list : expr .  (3)
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)

	MOD  shift 49
	PLUS  shift 50
	TIMES  shift 51
	MINUS  shift 52
	DIVIDE  shift 53
	EQ  shift 54
	NEQ  shift 55
	LEQ  shift 56
	GEQ  shift 57
	LT  shift 58
	GT  shift 59
	AND  shift 60
	OR  shift 61
	RPAREN  reduce 3
	COMMA  reduce 3


state 72
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)
	expr : ID ASSIGN expr .  (19)

	MOD  shift 49
	PLUS  shift 50
	TIMES  shift 51
	MINUS  shift 52
	DIVIDE  shift 53
	EQ  shift 54
	NEQ  shift 55
	LEQ  shift 56
	GEQ  shift 57
	LT  shift 58
	GT  shift 59
	AND  shift 60
	OR  shift 61
	SEMI  reduce 19
	RPAREN  reduce 19
	COMMA  reduce 19


state 73
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr MOD expr .  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)

	.  reduce 9


state 74
	expr : expr . PLUS expr  (5)
	expr : expr PLUS expr .  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)

	MOD  shift 49
	TIMES  shift 51
	DIVIDE  shift 53
	SEMI  reduce 5
	RPAREN  reduce 5
	COMMA  reduce 5
	PLUS  reduce 5
	MINUS  reduce 5
	EQ  reduce 5
	NEQ  reduce 5
	LEQ  reduce 5
	GEQ  reduce 5
	LT  reduce 5
	GT  reduce 5
	AND  reduce 5
	OR  reduce 5


state 75
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr TIMES expr .  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)

	.  reduce 7


state 76
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr MINUS expr .  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)

	MOD  shift 49
	TIMES  shift 51
	DIVIDE  shift 53
	SEMI  reduce 6
	RPAREN  reduce 6
	COMMA  reduce 6
	PLUS  reduce 6
	MINUS  reduce 6
	EQ  reduce 6
	NEQ  reduce 6
	LEQ  reduce 6
	GEQ  reduce 6
	LT  reduce 6
	GT  reduce 6
	AND  reduce 6
	OR  reduce 6


state 77
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr DIVIDE expr .  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)

	.  reduce 8


state 78
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr EQ expr .  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)

	MOD  shift 49
	PLUS  shift 50
	TIMES  shift 51
	MINUS  shift 52
	DIVIDE  shift 53
	LEQ  shift 56
	GEQ  shift 57
	LT  shift 58
	GT  shift 59
	SEMI  reduce 14
	RPAREN  reduce 14
	COMMA  reduce 14
	EQ  reduce 14
	NEQ  reduce 14
	AND  reduce 14
	OR  reduce 14


state 79
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr NEQ expr .  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)

	MOD  shift 49
	PLUS  shift 50
	TIMES  shift 51
	MINUS  shift 52
	DIVIDE  shift 53
	LEQ  shift 56
	GEQ  shift 57
	LT  shift 58
	GT  shift 59
	SEMI  reduce 15
	RPAREN  reduce 15
	COMMA  reduce 15
	EQ  reduce 15
	NEQ  reduce 15
	AND  reduce 15
	OR  reduce 15


state 80
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr LEQ expr .  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)

	MOD  shift 49
	PLUS  shift 50
	TIMES  shift 51
	MINUS  shift 52
	DIVIDE  shift 53
	SEMI  reduce 12
	RPAREN  reduce 12
	COMMA  reduce 12
	EQ  reduce 12
	NEQ  reduce 12
	LEQ  reduce 12
	GEQ  reduce 12
	LT  reduce 12
	GT  reduce 12
	AND  reduce 12
	OR  reduce 12


state 81
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr GEQ expr .  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)

	MOD  shift 49
	PLUS  shift 50
	TIMES  shift 51
	MINUS  shift 52
	DIVIDE  shift 53
	SEMI  reduce 13
	RPAREN  reduce 13
	COMMA  reduce 13
	EQ  reduce 13
	NEQ  reduce 13
	LEQ  reduce 13
	GEQ  reduce 13
	LT  reduce 13
	GT  reduce 13
	AND  reduce 13
	OR  reduce 13


state 82
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr LT expr .  (10)
	expr : expr . GT expr  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)

	MOD  shift 49
	PLUS  shift 50
	TIMES  shift 51
	MINUS  shift 52
	DIVIDE  shift 53
	SEMI  reduce 10
	RPAREN  reduce 10
	COMMA  reduce 10
	EQ  reduce 10
	NEQ  reduce 10
	LEQ  reduce 10
	GEQ  reduce 10
	LT  reduce 10
	GT  reduce 10
	AND  reduce 10
	OR  reduce 10


state 83
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . TIMES expr  (7)
	expr : expr . DIVIDE expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . GT expr  (11)
	expr : expr GT expr .  (11)
	expr : expr . LEQ expr  (12)
	expr : expr . GEQ expr  (13)
	expr : expr . EQ expr  (14)
	expr : expr . NEQ expr  (15)
	expr : expr . OR expr  (16)
	expr : expr . AND expr  (17)

	MOD  shift 49
	PLUS  shift 50
	TIMES  shift 51
	MINUS  shift 52
	DIVIDE  shift 53
	SEMI  reduce 11
	RPAREN  reduce 11
	COMMA  reduce 11
	EQ  reduce 11
	NEQ  reduce 11
	LEQ  reduce 11
	GEQ  reduce 11
	LT  reduce 11
	GT  reduce 11
	AND  reduce 11
	OR  reduce 11

